chore: update obsolete toml key package.category -> package.categories

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "o-o"
 description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
 homepage = "https://github.com/tos-kamiya/o-o"
 keywords = ["cli", "utility"]
-category = ["command-line-utilities"]
+categories = ["command-line-utilities"]
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
