--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "o-o"
 description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
@@ -17,3 +17,4 @@ subprocess = "0.2"
 tempfile = "3"
 anyhow = "1.0"
 zgclp = "0.3"
+thiserror = "1.0"
