--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "o-o"
 description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
@@ -16,5 +16,5 @@ readme = "README.md"
 subprocess = "0.2"
 tempfile = "3"
 anyhow = "1.0"
-zgclp = "0.3"
+ng-clp = "0.1"
 thiserror = "1.0"
