--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "o-o"
 description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
-version = "0.4.3"
+version = "0.4.4"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
@@ -18,3 +18,6 @@ tempfile = "3"
 anyhow = "1.0"
 ng-clp = "0.3"
 thiserror = "1.0"
+
+[profile.release]
+lto = true
