--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "o-o"
 description = "Enables commands that assume the standard input and output to read and write to files specified in the command line."
-version = "0.5.0"
+version = "0.5.1"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
@@ -13,11 +13,12 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-subprocess = "0.2"
-tempfile = "3"
+duct = "0.13"
+tempfile = "3.3"
 anyhow = "1.0"
-ng-clp = "0.3"
 thiserror = "1.0"
+ng-clp = "0.3"
 
 [profile.release]
 lto = true
+codegen-units = 1
