It is better to use the repository field in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.5.2"
 edition = "2021"
 authors = ["Toshihiro Kamiya <kamiya@mbj.nifty.com>"]
 license = "MIT/Apache-2.0"
-homepage = "https://github.com/tos-kamiya/o-o"
+repository = "https://github.com/tos-kamiya/o-o"
 keywords = ["cli", "utility"]
 categories = ["command-line-utilities"]
 readme = "README.md"
